--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,21 @@ button{
 button:hover{
   background-color:#6666FF;
 }
+.message{
+  margin-left:50%;
+  margin-right:50%;
+  width: 30px;
+  height: 20px;
+  font-size: 30px;
+  background-color:blue;
+  color:blue;
+}
+
+p{
+  /* color:green; */
+  text-align: center;
+  border-radius: 5%;
+  background-color:lightgreen;
+  width:15%;
+  font-size: 23px;
+}
